--- a/Client/src/jamtaba/gui/PreferencesDialog.ui
+++ b/Client/src/jamtaba/gui/PreferencesDialog.ui
@@ -261,13 +261,13 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tabVST">
       <attribute name="title">
        <string>VST</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_8">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <layout class="QHBoxLayout" name="topButtonsLayout">
          <property name="spacing">
           <number>10</number>
          </property>
@@ -402,7 +402,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget_2" native="true">
+    <widget class="QWidget" name="widgetBottom" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <property name="leftMargin">
        <number>0</number>
