--- a/Client/src/jamtaba/resources/jamtaba.css
+++ b/Client/src/jamtaba/resources/jamtaba.css
@@ -88,12 +88,21 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
 /* common widgets */
 
 .QLineEdit{
-border-radius: 10px;
-padding: 2px;
-background: rgb(100, 100, 100);
-color: white;
-border: 1px solid rgb(51, 51, 51);
+    border-radius: 10px;
+    padding: 2px;
+    background: rgb(100, 100, 100);
+    color: white;
+    border: 1px solid rgb(51, 51, 51);
 }
+
+.QLineEdit[enabled="false"]{
+    border-radius: 3px;
+    padding: 2px;
+    background: none;
+    color: white;
+    border: none;
+}
+
 
 
 QCheckBox::indicator, QGroupBox::indicator  {
@@ -346,13 +355,13 @@ color: white;
 
 
 BaseTrackView  > .QLabel#trackName {
-color: rgb(0, 0, 0);
-font-weight: bold;
-margin-top:5px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    margin-top:5px;
 }
 
 BaseTrackView  > .QLineEdit#channelName {
-margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 
