--- a/Client/src/jamtaba/gui/NinjamRoomWindow.ui
+++ b/Client/src/jamtaba/gui/NinjamRoomWindow.ui
@@ -41,15 +41,12 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QWidget" name="topPanel" native="true">
+       <widget class="NinjamPanel" name="topPanel" native="true">
         <property name="minimumSize">
          <size>
           <width>0</width>
           <height>140</height>
          </size>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(255, 255, 255, 255));</string>
         </property>
        </widget>
       </item>
@@ -69,6 +66,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>NinjamPanel</class>
+   <extends>QWidget</extends>
+   <header>NinjamPanell.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
