--- a/Client/src/jamtaba/resources/jamtaba.css
+++ b/Client/src/jamtaba/resources/jamtaba.css
@@ -375,7 +375,9 @@ background-color: rgb(180, 180, 180);
 
 /* NINJAM */
 NinjamPanel{
-background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255, 90, 62), stop:1 rgb(175, 0, 0));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(253, 253, 253), stop:1 rgb(193, 193, 193));
+    border-radius: 3px;
+    border: 1px solid rgb(135, 135, 135);
 }
 
 
