--- a/src/jamtaba/gui/NinjamRoomWindow.ui
+++ b/src/jamtaba/gui/NinjamRoomWindow.ui
@@ -70,7 +70,7 @@
   <customwidget>
    <class>NinjamPanel</class>
    <extends>QWidget</extends>
-   <header>NinjamPanell.h</header>
+   <header>NinjamPanel.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
