recebendo stream do servidor, mas ainda tenho uns problemas quando muda de intervalo

--- a/Client/src/jamtaba/resources/jamtaba.qrc
+++ b/Client/src/jamtaba/resources/jamtaba.qrc
@@ -266,5 +266,8 @@
     </qresource>
     <qresource prefix="/">
         <file>click.wav</file>
+        <file>../../../../bumbo.ogg</file>
+        <file>../../../../sine.ogg</file>
+        <file>../../../../bateria mono.ogg</file>
     </qresource>
 </RCC>
